# amp-hal-st

./: CMakePresets.json
examples/blink/: CMakeLists.txt
hal_st/cortex/: FaultTracer.cpp
hal_st/stm32fxxx/: AdcDmaMultiChannelStm.cpp  AdcDmaStm.cpp  AnalogToDigitalPinStm.cpp  CMakeLists.txt  DefaultClockNucleoH753ZI.cpp  DefaultClockNucleoH753ZI.hpp  DmaStm.cpp  DmaStm.hpp  FlashInternalStm.cpp  GeneratePinoutTableStructure.xsl  GpioStm.cpp  I2cStm.cpp  PeripheralTableH7xx.xml  SpiSlaveStmDma.cpp  TimerStm.cpp  UartStm.cpp  WatchDogStm.cpp
hal_st/stm32fxxx/ip/: GPIO-STM32H7A2_gpio_v1_0_Modes.xml
hal_st/stm32fxxx/mcu/: STM32H753ZITx.xml
hal_st/synchronous_stm32fxxx/: CMakeLists.txt  SynchronousFlashInternalStm.cpp
st/: CMakeLists.txt
st/CMSIS_STM32H7xx/Device/ST/STM32H7xx/Include/: stm32h723xx.h  stm32h725xx.h  stm32h730xx.h  stm32h730xxq.h  stm32h733xx.h  stm32h735xx.h  stm32h742xx.h  stm32h743xx.h  stm32h745xg.h  stm32h745xx.h  stm32h747xg.h  stm32h747xx.h  stm32h750xx.h  stm32h753xx.h  stm32h755xx.h  stm32h757xx.h  stm32h7a3xx.h  stm32h7a3xxq.h  stm32h7b0xx.h  stm32h7b0xxq.h  stm32h7b3xx.h  stm32h7b3xxq.h  stm32h7xx.h
st/CMSIS_STM32H7xx/Device/ST/STM32H7xx/Source/Templates/gcc/: startup_stm32h753xx.s
st/STM32H7xx_HAL_Driver/: version.txt
st/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal_sdio.h  stm32h7xx_hal_tim.h
st/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_cryp.c  stm32h7xx_hal_gpio.c  stm32h7xx_hal_mdios.c  stm32h7xx_hal_mmc.c  stm32h7xx_hal_sd.c  stm32h7xx_hal_sdio.c  stm32h7xx_hal_spi.c  stm32h7xx_hal_uart.c  stm32h7xx_ll_usb.c
st/hal_conf/: stm32h7xx_hal_conf.h
st/ldscripts/: mem_stm32h753.ld
